@@ -690,12 +690,12 @@ cl_z80::inst_add(t_mem code)
       
     case 0x86: // ADD A,(HL)
       {
-	unsigned char utmp;
+        unsigned char utmp;
         utmp = get1(regs.HL);
         add_A_bytereg(utmp);
-	vc.rd++;
-	tick(6);
-	break;
+        vc.rd++;
+        tick(6);
+        break;
       }
       
     case 0x87: // ADD A,A
@@ -708,8 +708,8 @@ cl_z80::inst_add(t_mem code)
         unsigned char utmp1;
         utmp1 = fetch();
         add_A_bytereg(utmp1);
-	tick(6);
-	break;
+        tick(6);
+        break;
       }
       
     default:
@@ -767,37 +767,34 @@ cl_z80::inst_jr(t_mem code)
   signed char j;
 
   j = fetch1();
+  tick(6);
   switch(code) {
     case 0x18: // JR dd
       PC += j;
-      tick(11);
+      tick(5);
     break;
     case 0x20: // JR NZ,dd
-      tick(6);
       if (!(regs.raf.F & BIT_Z)) {
         PC += j;
-	tick(5);
+        tick(5);
       }
     break;
     case 0x28: // JR Z,dd
-      tick(6);
       if ((regs.raf.F & BIT_Z)) {
         PC += j;
-	tick(5);
+        tick(5);
       }
     break;
     case 0x30: // JR NC,dd
-      tick(6);
       if (!(regs.raf.F & BIT_C)) {
         PC += j;
-	tick(5);
+        tick(5);
       }
     break;
     case 0x38: // JR C,dd
-      tick(6);
       if ((regs.raf.F & BIT_C)) {
         PC += j;
-	tick(5);
+        tick(5);
       }
     break;
     default:
@@ -1305,16 +1302,16 @@ cl_z80::inst_ret(t_mem code)
       tick(4);
       if (!(regs.raf.F & BIT_Z)) {
         pop2(PC);
-	vc.rd+= 2;
-	tick(6);
+        vc.rd+= 2;
+        tick(6);
       }
       break;
     case 0xC8: // RET Z
       tick(4);
       if ((regs.raf.F & BIT_Z)) {
         pop2(PC);
-	vc.rd+= 2;
-	tick(6);
+        vc.rd+= 2;
+        tick(6);
       }
       break;
     case 0xC9: // RET
@@ -1326,48 +1323,48 @@ cl_z80::inst_ret(t_mem code)
       tick(4);
       if (!(regs.raf.F & BIT_C)) {
         pop2(PC);
-	vc.rd+= 2;
-	tick(6);
+        vc.rd+= 2;
+        tick(6);
       }
       break;
     case 0xD8: // RET C
       tick(4);
       if ((regs.raf.F & BIT_C)) {
         pop2(PC);
-	vc.rd+= 2;
-	tick(6);
+        vc.rd+= 2;
+        tick(6);
       }
       break;
     case 0xE0: // RET PO
       tick(4);
       if (!(regs.raf.F & BIT_P)) {
         pop2(PC);
-	vc.rd+= 2;
-	tick(6);
+        vc.rd+= 2;
+        tick(6);
       }
       break;
     case 0xE8: // RET PE
       tick(4);
       if ((regs.raf.F & BIT_P)) {
         pop2(PC);
-	vc.rd+= 2;
-	tick(6);
+        vc.rd+= 2;
+        tick(6);
       }
       break;
     case 0xF0: // RET P
       tick(4);
       if (!(regs.raf.F & BIT_S)) {
         pop2(PC);
-	vc.rd+= 2;
-	tick(6);
+        vc.rd+= 2;
+        tick(6);
       }
       break;
     case 0xF8: // RET M
       tick(4);
       if ((regs.raf.F & BIT_S)) {
         pop2(PC);
-	vc.rd+= 2;
-	tick(6);
+        vc.rd+= 2;
+        tick(6);
       }
       break;
     default:
@@ -1387,8 +1384,8 @@ cl_z80::inst_call(t_mem code)
       if (!(regs.raf.F & BIT_Z)) {
         push2(PC+2);
         PC = fetch2();
-	vc.wr+= 2;
-	tick(7);
+        vc.wr+= 2;
+        tick(7);
       } else {
         fetch2();
       }
@@ -1398,8 +1395,8 @@ cl_z80::inst_call(t_mem code)
       if (regs.raf.F & BIT_Z) {
         push2(PC+2);
         PC = fetch2();
-	vc.wr+= 2;
-	tick(7);
+        vc.wr+= 2;
+        tick(7);
       } else {
         fetch2();
       }
@@ -1415,8 +1412,8 @@ cl_z80::inst_call(t_mem code)
       if (!(regs.raf.F & BIT_C)) {
         push2(PC+2);
         PC = fetch2();
-	vc.wr+= 2;
-	tick(7);
+        vc.wr+= 2;
+        tick(7);
       } else {
         fetch2();
       }
@@ -1426,8 +1423,8 @@ cl_z80::inst_call(t_mem code)
       if (regs.raf.F & BIT_C) {
         push2(PC+2);
         PC = fetch2();
-	vc.wr+= 2;
-	tick(7);
+        vc.wr+= 2;
+        tick(7);
       } else {
         fetch2();
       }
@@ -1437,8 +1434,8 @@ cl_z80::inst_call(t_mem code)
       if (!(regs.raf.F & BIT_P)) {
         push2(PC+2);
         PC = fetch2();
-	vc.wr+= 2;
-	tick(7);
+        vc.wr+= 2;
+        tick(7);
       } else {
         fetch2();
       }
@@ -1448,8 +1445,8 @@ cl_z80::inst_call(t_mem code)
       if (regs.raf.F & BIT_P) {
         push2(PC+2);
         PC = fetch2();
-	vc.wr+= 2;
-	tick(7);
+        vc.wr+= 2;
+        tick(7);
       } else {
         fetch2();
       }
@@ -1459,8 +1456,8 @@ cl_z80::inst_call(t_mem code)
       if (!(regs.raf.F & BIT_S)) {
         push2(PC+2);
         PC = fetch2();
-	vc.wr+= 2;
-	tick(7);
+        vc.wr+= 2;
+        tick(7);
       } else {
         fetch2();
       }
@@ -1470,8 +1467,8 @@ cl_z80::inst_call(t_mem code)
       if (regs.raf.F & BIT_S) {
         push2(PC+2);
         PC = fetch2();
-	vc.wr+= 2;
-	tick(7);
+        vc.wr+= 2;
+        tick(7);
       } else {
         fetch2();
       }
